# MicroCubic

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/AppController/: AppController.cpp  AppController.h  AppControllerType.h  CMakeLists.txt
components/AppController/AppControllerUI/: AppControllerUI.c  AppControllerUI.h  AppLoading.c
components/Applications/: CMakeLists.txt  Screen.cpp  Screen.h
components/Applications/Game2048App/: Game2048App.cpp  Game2048App.h  Game2048Controller.cpp  Game2048Controller.h
components/Applications/Game2048App/Game2048AppUI/: Game2048AppUI.c  Game2048AppUI.h
components/Applications/UpgradeApp/: UpgradeApp.cpp  UpgradeApp.h
components/Applications/UpgradeApp/UpgradeAppUI/: UpgradeAppUI.c  UpgradeAppUI.h  UpgradeIco.c
components/Applications/WeatherApp/: WeatherApp.c  WeatherApp.cpp  WeatherApp.h  WeatherUI.c  WeatherUI.h
components/Applications/WeatherApp/WeatherUI/: WeatherIco.c  WeatherUI.c  WeatherUI.h  Weather_image.h
components/Applications/WifiApp/: WifiApp.cpp  WifiApp.h
components/Applications/WifiApp/WifiAppUI/: WifiAppUI.c  WifiAppUI.h  WifiIco.c
components/I2Cdev/: I2Cdev.cpp
components/MYDriver/: CMakeLists.txt
components/MYDriver/HttpClient/: HttpClient.cpp  HttpClient.h
components/MYDriver/HttpServer/: HttpServer.cpp  HttpServer.h  wifi.html
components/MYDriver/Sd/: Sd.cpp  Sd.h
components/MYDriver/Spiffs/: Spiffs.cpp  Spiffs.h
components/MYDriver/Wifi/: README.md  Wifi.cpp  Wifi.h
components/lvgl/: .cproject  lv_conf.h
components/lvgl/tests/: .cproject
components/lvgl_esp32_drivers/: .cproject  lvgl_helpers.c  lvgl_helpers.h
components/lvgl_esp32_drivers/lvgl_tft/: st7789.c
components/mpu6050/: CMakeLists.txt  MPU.cpp  MPU.h  mpu6050.c
components/mpu6050/include/: mpu6050.h
main/: CMakeLists.txt  main.cpp
